After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779866 - videotimecode: Fix invalid timecode right before a new second
videotimecode: Fix invalid timecode right before a new second
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.11.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 780982 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-03-10 15:43 UTC by Vivia Nikolaidou
Modified: 2017-04-09 08:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
videotimecode: Fix invalid timecode right before a new second (1.82 KB, patch)
2017-03-10 15:43 UTC, Vivia Nikolaidou
committed Details | Review
timecode: Fix invalid drop-frame timecode right before a new second (1.11 KB, patch)
2017-04-06 19:39 UTC, Vivia Nikolaidou
committed Details | Review

Description Vivia Nikolaidou 2017-03-10 15:43:32 UTC
See commit message.
Comment 1 Vivia Nikolaidou 2017-03-10 15:43:36 UTC
Created attachment 347656 [details] [review]
videotimecode: Fix invalid timecode right before a new second

When initializing a timecode from a GDateTime, and the remaining time
until the new second is less than half a frame (according to the given
frame rate), it would lead to the creation of an invalid timecode, e.g.
00:00:00:25 (at 25 fps) instead of 00:00:01:00. Fixed.
Comment 2 Sebastian Dröge (slomo) 2017-03-10 15:48:09 UTC
Attachment 347656 [details] pushed as a122135 - videotimecode: Fix invalid timecode right before a new second
Comment 3 Vivia Nikolaidou 2017-04-06 19:39:28 UTC
Created attachment 349397 [details] [review]
timecode: Fix invalid drop-frame timecode right before a new second

The previous fix was only working for non-drop-frame timecodes.
Comment 4 Vivia Nikolaidou 2017-04-06 19:40:31 UTC
*** Bug 780982 has been marked as a duplicate of this bug. ***
Comment 5 Sebastian Dröge (slomo) 2017-04-09 08:16:16 UTC
Attachment 349397 [details] pushed as bdccc98 - timecode: Fix invalid drop-frame timecode right before a new second